--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,16 @@ h1 {
     font-size: 70px;
 }
 
+* {
+    background-color: darkgreen;
+}
+
+button {
+    color: white;
+    border-color: white;
+}
+
+select {
+    border-color: white;
+    color: white;
+}
